// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import ConnectScreenConnected component renders ConnectScreenConnected 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "zIndex": 1,
      }
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(255, 255, 255)",
              "borderBottomColor": "rgb(216, 216, 216)",
              "flex": 1,
              "shadowColor": "rgb(216, 216, 216)",
              "shadowOffset": Object {
                "height": 0.5,
                "width": 0,
              },
              "shadowOpacity": 0.85,
              "shadowRadius": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 44,
            "maxHeight": undefined,
            "minHeight": undefined,
            "opacity": undefined,
            "transform": undefined,
          }
        }
      >
        <View
          pointerEvents="none"
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          pointerEvents="box-none"
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "marginHorizontal": 16,
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityRole="header"
              aria-level="1"
              numberOfLines={1}
              onLayout={[Function]}
              style={
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 17,
                  "fontWeight": "600",
                }
              }
            >
              Home
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransition={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "overflow": undefined,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          needsOffscreenAlphaCompositing={false}
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "rgb(249, 249, 251)",
                        "flex": 1,
                        "height": "100%",
                      }
                    }
                  >
                    <View
                      edges={
                        Array [
                          "left",
                          "right",
                        ]
                      }
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        refreshControl={
                          <RefreshControlMock
                            onRefresh={[Function]}
                            refreshing={false}
                          />
                        }
                      >
                        <RCTRefreshControl />
                        <View>
                          <View
                            style={
                              Object {
                                "paddingHorizontal": 16,
                                "paddingVertical": 16,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginBottom": 16,
                                }
                              }
                            >
                              <View>
                                <Text
                                  secondary={true}
                                  style={
                                    Object {
                                      "color": "rgba(39, 39, 46, 0.6)",
                                      "fontFamily": "InterUI-Bold",
                                      "fontSize": 16,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  People to Follow
                                </Text>
                              </View>
                            </View>
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                            >
                              <View
                                bordered={true}
                                disabled={false}
                                pill={false}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "transparent",
                                    "borderColor": "#A5A5A5",
                                    "borderRadius": 16,
                                    "borderWidth": 2,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "justifyContent": "center",
                                    "marginTop": 8,
                                    "opacity": 1,
                                    "overflow": "hidden",
                                    "paddingHorizontal": 16,
                                    "width": "100%",
                                  }
                                }
                              >
                                <Text
                                  style={
                                    Object {
                                      "color": "#A5A5A5",
                                      "fontFamily": "InterUI-Bold",
                                      "fontSize": 16,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  Find People to Follow
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                  <Modal
                    animationType="slide"
                    hardwareAccelerated={false}
                    onRequestClose={[Function]}
                    visible={false}
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "rgb(249, 249, 251)",
                          "flex": 1,
                          "height": "100%",
                        }
                      }
                    >
                      <RCTSafeAreaView
                        emulateUnlessSupported={true}
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "#FFFFFF",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "height": 64,
                                "justifyContent": "space-between",
                                "padding": 16,
                                "width": "100%",
                              }
                            }
                          >
                            <View
                              accessible={true}
                              focusable={false}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "minWidth": 48,
                                  "opacity": 1,
                                }
                              }
                            >
                              <Text
                                numberOfLines={1}
                                style={
                                  Object {
                                    "color": "#17B582",
                                    "fontSize": 16,
                                    "fontWeight": undefined,
                                    "lineHeight": 24,
                                    "textAlign": "right",
                                  }
                                }
                              />
                            </View>
                            <Text
                              style={
                                Object {
                                  "color": "#27272E",
                                  "fontFamily": "InterUI-Bold",
                                  "fontSize": 16,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              Find People to Follow
                            </Text>
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "minWidth": 48,
                                  "opacity": 1,
                                }
                              }
                            >
                              <Text
                                numberOfLines={1}
                                strong={true}
                                style={
                                  Object {
                                    "color": "#17B582",
                                    "fontSize": 16,
                                    "fontWeight": "bold",
                                    "lineHeight": 24,
                                    "textAlign": "right",
                                  }
                                }
                              >
                                Done
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginHorizontal": 16,
                              }
                            }
                          >
                            <View
                              disabled={false}
                              style={
                                Object {
                                  "overflow": "hidden",
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "rgb(249, 249, 251)",
                                    "borderRadius": 16,
                                    "flexDirection": "row",
                                    "flexGrow": 1,
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <RNSVGSvgView
                                  align="xMidYMid"
                                  bbHeight={16}
                                  bbWidth={16}
                                  height={16}
                                  isFocused={false}
                                  meetOrSlice={0}
                                  minX={0}
                                  minY={0}
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "transparent",
                                        "borderWidth": 0,
                                      },
                                      Object {
                                        "marginLeft": 16,
                                      },
                                      null,
                                      Object {
                                        "flex": 0,
                                        "height": 16,
                                        "width": 16,
                                      },
                                    ]
                                  }
                                  vbHeight={24}
                                  vbWidth={24}
                                  width={16}
                                >
                                  <RNSVGGroup
                                    fill={
                                      Array [
                                        0,
                                        4278190080,
                                      ]
                                    }
                                    fillOpacity={1}
                                    fillRule={1}
                                    font={Object {}}
                                    matrix={
                                      Array [
                                        1,
                                        0,
                                        0,
                                        1,
                                        0,
                                        0,
                                      ]
                                    }
                                    opacity={1}
                                    originX={0}
                                    originY={0}
                                    propList={Array []}
                                    rotation={0}
                                    scaleX={1}
                                    scaleY={1}
                                    skewX={0}
                                    skewY={0}
                                    stroke={null}
                                    strokeDasharray={null}
                                    strokeDashoffset={null}
                                    strokeLinecap={0}
                                    strokeLinejoin={0}
                                    strokeMiterlimit={4}
                                    strokeOpacity={1}
                                    strokeWidth={1}
                                    vectorEffect={0}
                                    x={0}
                                    y={0}
                                  >
                                    <RNSVGPath
                                      d="M20.77 18.56l-3.42-3.42c.82-1.24 1.3-2.72 1.3-4.3 0-4.33-3.5-7.84-7.82-7.84S3 6.5 3 10.83c0 4.3 3.5 7.82 7.83 7.82 1.6 0 3.07-.48 4.3-1.3l3.43 3.42c.3.3.8.3 1.1 0l1.1-1.1c.32-.3.32-.8 0-1.1zm-16.2-7.73c0-3.46 2.8-6.26 6.26-6.26 3.45 0 6.26 2.8 6.26 6.26 0 3.45-2.83 6.26-6.28 6.26-3.46 0-6.26-2.83-6.26-6.28z"
                                      fill={
                                        Array [
                                          0,
                                          1294411566,
                                        ]
                                      }
                                      fillOpacity={1}
                                      fillRule={1}
                                      matrix={
                                        Array [
                                          1,
                                          0,
                                          0,
                                          1,
                                          0,
                                          0,
                                        ]
                                      }
                                      opacity={1}
                                      originX={0}
                                      originY={0}
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                      rotation={0}
                                      scaleX={1}
                                      scaleY={1}
                                      skewX={0}
                                      skewY={0}
                                      stroke={null}
                                      strokeDasharray={null}
                                      strokeDashoffset={null}
                                      strokeLinecap={0}
                                      strokeLinejoin={0}
                                      strokeMiterlimit={4}
                                      strokeOpacity={1}
                                      strokeWidth={1}
                                      vectorEffect={0}
                                      x={0}
                                      y={0}
                                    />
                                  </RNSVGGroup>
                                </RNSVGSvgView>
                                <TextInput
                                  allowFontScaling={true}
                                  cancelButtonOffset={0}
                                  editable={true}
                                  isFocused={false}
                                  onChangeText={[Function]}
                                  onFocus={[Function]}
                                  placeholder="Search"
                                  placeholderTextColor="rgba(39, 39, 46, 0.3)"
                                  rejectResponderTermination={true}
                                  returnKeyType="search"
                                  selectionColor="#17B582"
                                  style={
                                    Object {
                                      "color": "#27272E",
                                      "flexGrow": 1,
                                      "fontFamily": "System",
                                      "fontSize": 14,
                                      "height": 40,
                                      "paddingLeft": 8,
                                      "paddingRight": 0,
                                      "paddingTop": 1,
                                      "paddingVertical": 0,
                                    }
                                  }
                                  underlineColorAndroid="transparent"
                                  value=""
                                />
                              </View>
                              <View
                                style={
                                  Object {
                                    "height": "100%",
                                    "position": "absolute",
                                    "right": 0,
                                    "transform": Array [
                                      Object {
                                        "translateX": 1000,
                                      },
                                    ],
                                  }
                                }
                              >
                                <View
                                  screenBackgroundColor="#FFFFFF"
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "#FFFFFF",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "backgroundColor": "rgb(249, 249, 251)",
                                        "borderBottomRightRadius": 16,
                                        "borderColor": "rgb(249, 249, 251)",
                                        "borderRightWidth": 1,
                                        "borderTopRightRadius": 16,
                                        "overflow": "hidden",
                                      }
                                    }
                                  >
                                    <View
                                      accessible={true}
                                      focusable={true}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                      style={
                                        Object {
                                          "opacity": 1,
                                        }
                                      }
                                    >
                                      <View
                                        borderRadius={28}
                                        iconPadding={12}
                                        style={
                                          Object {
                                            "opacity": 0,
                                            "padding": 12,
                                          }
                                        }
                                      >
                                        <RNSVGSvgView
                                          align="xMidYMid"
                                          bbHeight={16}
                                          bbWidth={16}
                                          height={16}
                                          meetOrSlice={0}
                                          minX={0}
                                          minY={0}
                                          style={
                                            Array [
                                              Object {
                                                "backgroundColor": "transparent",
                                                "borderWidth": 0,
                                              },
                                              undefined,
                                              Object {
                                                "opacity": 1,
                                              },
                                              Object {
                                                "flex": 0,
                                                "height": 16,
                                                "width": 16,
                                              },
                                            ]
                                          }
                                          vbHeight={24}
                                          vbWidth={24}
                                          width={16}
                                        >
                                          <RNSVGGroup
                                            fill={
                                              Array [
                                                0,
                                                4278190080,
                                              ]
                                            }
                                            fillOpacity={1}
                                            fillRule={1}
                                            font={Object {}}
                                            matrix={
                                              Array [
                                                1,
                                                0,
                                                0,
                                                1,
                                                0,
                                                0,
                                              ]
                                            }
                                            opacity={1}
                                            originX={0}
                                            originY={0}
                                            propList={Array []}
                                            rotation={0}
                                            scaleX={1}
                                            scaleY={1}
                                            skewX={0}
                                            skewY={0}
                                            stroke={null}
                                            strokeDasharray={null}
                                            strokeDashoffset={null}
                                            strokeLinecap={0}
                                            strokeLinejoin={0}
                                            strokeMiterlimit={4}
                                            strokeOpacity={1}
                                            strokeWidth={1}
                                            vectorEffect={0}
                                            x={0}
                                            y={0}
                                          >
                                            <RNSVGPath
                                              d="M13.07 12l7.2-7.2.5-.5c.3-.3.3-.78 0-1.08-.3-.3-.76-.3-1.06 0l-.5.5-7.2 7.2-7.2-7.2-.5-.5c-.3-.3-.77-.3-1.07 0-.3.3-.3.77 0 1.07l.5.5 7.2 7.2-7.7 7.7c-.3.3-.3.77 0 1.07.3.3.77.3 1.07 0l7.7-7.7 7.7 7.7c.3.3.78.3 1.08 0 .3-.3.3-.77 0-1.07l-7.7-7.7z"
                                              fill={
                                                Array [
                                                  0,
                                                  1294411566,
                                                ]
                                              }
                                              fillOpacity={1}
                                              fillRule={1}
                                              matrix={
                                                Array [
                                                  1,
                                                  0,
                                                  0,
                                                  1,
                                                  0,
                                                  0,
                                                ]
                                              }
                                              opacity={1}
                                              originX={0}
                                              originY={0}
                                              propList={
                                                Array [
                                                  "fill",
                                                ]
                                              }
                                              rotation={0}
                                              scaleX={1}
                                              scaleY={1}
                                              skewX={0}
                                              skewY={0}
                                              stroke={null}
                                              strokeDasharray={null}
                                              strokeDashoffset={null}
                                              strokeLinecap={0}
                                              strokeLinejoin={0}
                                              strokeMiterlimit={4}
                                              strokeOpacity={1}
                                              strokeWidth={1}
                                              vectorEffect={0}
                                              x={0}
                                              y={0}
                                            />
                                          </RNSVGGroup>
                                        </RNSVGSvgView>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                          <RCTScrollView
                            style={
                              Object {
                                "height": "90%",
                              }
                            }
                          >
                            <View />
                          </RCTScrollView>
                        </View>
                      </RCTSafeAreaView>
                    </View>
                  </Modal>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`import ConnectScreenConnected component renders ConnectScreenConnected with ActionBar and ActionTable 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "zIndex": 1,
      }
    }
  >
    <View
      accessibilityElementsHidden={false}
      importantForAccessibility="auto"
      onLayout={[Function]}
      pointerEvents="box-none"
      style={null}
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "rgb(255, 255, 255)",
              "borderBottomColor": "rgb(216, 216, 216)",
              "flex": 1,
              "shadowColor": "rgb(216, 216, 216)",
              "shadowOffset": Object {
                "height": 0.5,
                "width": 0,
              },
              "shadowOpacity": 0.85,
              "shadowRadius": 0,
            }
          }
        />
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 44,
            "maxHeight": undefined,
            "minHeight": undefined,
            "opacity": undefined,
            "transform": undefined,
          }
        }
      >
        <View
          pointerEvents="none"
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          pointerEvents="box-none"
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "marginHorizontal": 16,
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityRole="header"
              aria-level="1"
              numberOfLines={1}
              onLayout={[Function]}
              style={
                Object {
                  "color": "rgb(28, 28, 30)",
                  "fontSize": 17,
                  "fontWeight": "600",
                }
              }
            >
              Home
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransition={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "overflow": undefined,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          needsOffscreenAlphaCompositing={false}
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "rgb(249, 249, 251)",
                        "flex": 1,
                        "height": "100%",
                      }
                    }
                  >
                    <View
                      edges={
                        Array [
                          "left",
                          "right",
                        ]
                      }
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        refreshControl={
                          <RefreshControlMock
                            onRefresh={[Function]}
                            refreshing={false}
                          />
                        }
                      >
                        <RCTRefreshControl />
                        <View>
                          <Text>
                            Action Bar
                          </Text>
                          <View
                            style={
                              Object {
                                "paddingHorizontal": 16,
                                "paddingVertical": 16,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginBottom": 16,
                                }
                              }
                            >
                              <View>
                                <Text
                                  secondary={true}
                                  style={
                                    Object {
                                      "color": "rgba(39, 39, 46, 0.6)",
                                      "fontFamily": "InterUI-Bold",
                                      "fontSize": 16,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  People to Follow
                                </Text>
                              </View>
                            </View>
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                            >
                              <View
                                bordered={true}
                                disabled={false}
                                pill={false}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "transparent",
                                    "borderColor": "#A5A5A5",
                                    "borderRadius": 16,
                                    "borderWidth": 2,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "justifyContent": "center",
                                    "marginTop": 8,
                                    "opacity": 1,
                                    "overflow": "hidden",
                                    "paddingHorizontal": 16,
                                    "width": "100%",
                                  }
                                }
                              >
                                <Text
                                  style={
                                    Object {
                                      "color": "#A5A5A5",
                                      "fontFamily": "InterUI-Bold",
                                      "fontSize": 16,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  Find People to Follow
                                </Text>
                              </View>
                            </View>
                          </View>
                          <Text>
                            Action Table
                          </Text>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                  <Modal
                    animationType="slide"
                    hardwareAccelerated={false}
                    onRequestClose={[Function]}
                    visible={false}
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "rgb(249, 249, 251)",
                          "flex": 1,
                          "height": "100%",
                        }
                      }
                    >
                      <RCTSafeAreaView
                        emulateUnlessSupported={true}
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "#FFFFFF",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "height": 64,
                                "justifyContent": "space-between",
                                "padding": 16,
                                "width": "100%",
                              }
                            }
                          >
                            <View
                              accessible={true}
                              focusable={false}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "minWidth": 48,
                                  "opacity": 1,
                                }
                              }
                            >
                              <Text
                                numberOfLines={1}
                                style={
                                  Object {
                                    "color": "#17B582",
                                    "fontSize": 16,
                                    "fontWeight": undefined,
                                    "lineHeight": 24,
                                    "textAlign": "right",
                                  }
                                }
                              />
                            </View>
                            <Text
                              style={
                                Object {
                                  "color": "#27272E",
                                  "fontFamily": "InterUI-Bold",
                                  "fontSize": 16,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              Find People to Follow
                            </Text>
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "minWidth": 48,
                                  "opacity": 1,
                                }
                              }
                            >
                              <Text
                                numberOfLines={1}
                                strong={true}
                                style={
                                  Object {
                                    "color": "#17B582",
                                    "fontSize": 16,
                                    "fontWeight": "bold",
                                    "lineHeight": 24,
                                    "textAlign": "right",
                                  }
                                }
                              >
                                Done
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginHorizontal": 16,
                              }
                            }
                          >
                            <View
                              disabled={false}
                              style={
                                Object {
                                  "overflow": "hidden",
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "rgb(249, 249, 251)",
                                    "borderRadius": 16,
                                    "flexDirection": "row",
                                    "flexGrow": 1,
                                    "overflow": "hidden",
                                  }
                                }
                              >
                                <RNSVGSvgView
                                  align="xMidYMid"
                                  bbHeight={16}
                                  bbWidth={16}
                                  height={16}
                                  isFocused={false}
                                  meetOrSlice={0}
                                  minX={0}
                                  minY={0}
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "transparent",
                                        "borderWidth": 0,
                                      },
                                      Object {
                                        "marginLeft": 16,
                                      },
                                      null,
                                      Object {
                                        "flex": 0,
                                        "height": 16,
                                        "width": 16,
                                      },
                                    ]
                                  }
                                  vbHeight={24}
                                  vbWidth={24}
                                  width={16}
                                >
                                  <RNSVGGroup
                                    fill={
                                      Array [
                                        0,
                                        4278190080,
                                      ]
                                    }
                                    fillOpacity={1}
                                    fillRule={1}
                                    font={Object {}}
                                    matrix={
                                      Array [
                                        1,
                                        0,
                                        0,
                                        1,
                                        0,
                                        0,
                                      ]
                                    }
                                    opacity={1}
                                    originX={0}
                                    originY={0}
                                    propList={Array []}
                                    rotation={0}
                                    scaleX={1}
                                    scaleY={1}
                                    skewX={0}
                                    skewY={0}
                                    stroke={null}
                                    strokeDasharray={null}
                                    strokeDashoffset={null}
                                    strokeLinecap={0}
                                    strokeLinejoin={0}
                                    strokeMiterlimit={4}
                                    strokeOpacity={1}
                                    strokeWidth={1}
                                    vectorEffect={0}
                                    x={0}
                                    y={0}
                                  >
                                    <RNSVGPath
                                      d="M20.77 18.56l-3.42-3.42c.82-1.24 1.3-2.72 1.3-4.3 0-4.33-3.5-7.84-7.82-7.84S3 6.5 3 10.83c0 4.3 3.5 7.82 7.83 7.82 1.6 0 3.07-.48 4.3-1.3l3.43 3.42c.3.3.8.3 1.1 0l1.1-1.1c.32-.3.32-.8 0-1.1zm-16.2-7.73c0-3.46 2.8-6.26 6.26-6.26 3.45 0 6.26 2.8 6.26 6.26 0 3.45-2.83 6.26-6.28 6.26-3.46 0-6.26-2.83-6.26-6.28z"
                                      fill={
                                        Array [
                                          0,
                                          1294411566,
                                        ]
                                      }
                                      fillOpacity={1}
                                      fillRule={1}
                                      matrix={
                                        Array [
                                          1,
                                          0,
                                          0,
                                          1,
                                          0,
                                          0,
                                        ]
                                      }
                                      opacity={1}
                                      originX={0}
                                      originY={0}
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                      rotation={0}
                                      scaleX={1}
                                      scaleY={1}
                                      skewX={0}
                                      skewY={0}
                                      stroke={null}
                                      strokeDasharray={null}
                                      strokeDashoffset={null}
                                      strokeLinecap={0}
                                      strokeLinejoin={0}
                                      strokeMiterlimit={4}
                                      strokeOpacity={1}
                                      strokeWidth={1}
                                      vectorEffect={0}
                                      x={0}
                                      y={0}
                                    />
                                  </RNSVGGroup>
                                </RNSVGSvgView>
                                <TextInput
                                  allowFontScaling={true}
                                  cancelButtonOffset={0}
                                  editable={true}
                                  isFocused={false}
                                  onChangeText={[Function]}
                                  onFocus={[Function]}
                                  placeholder="Search"
                                  placeholderTextColor="rgba(39, 39, 46, 0.3)"
                                  rejectResponderTermination={true}
                                  returnKeyType="search"
                                  selectionColor="#17B582"
                                  style={
                                    Object {
                                      "color": "#27272E",
                                      "flexGrow": 1,
                                      "fontFamily": "System",
                                      "fontSize": 14,
                                      "height": 40,
                                      "paddingLeft": 8,
                                      "paddingRight": 0,
                                      "paddingTop": 1,
                                      "paddingVertical": 0,
                                    }
                                  }
                                  underlineColorAndroid="transparent"
                                  value=""
                                />
                              </View>
                              <View
                                style={
                                  Object {
                                    "height": "100%",
                                    "position": "absolute",
                                    "right": 0,
                                    "transform": Array [
                                      Object {
                                        "translateX": 1000,
                                      },
                                    ],
                                  }
                                }
                              >
                                <View
                                  screenBackgroundColor="#FFFFFF"
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "#FFFFFF",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "backgroundColor": "rgb(249, 249, 251)",
                                        "borderBottomRightRadius": 16,
                                        "borderColor": "rgb(249, 249, 251)",
                                        "borderRightWidth": 1,
                                        "borderTopRightRadius": 16,
                                        "overflow": "hidden",
                                      }
                                    }
                                  >
                                    <View
                                      accessible={true}
                                      focusable={true}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                      style={
                                        Object {
                                          "opacity": 1,
                                        }
                                      }
                                    >
                                      <View
                                        borderRadius={28}
                                        iconPadding={12}
                                        style={
                                          Object {
                                            "opacity": 0,
                                            "padding": 12,
                                          }
                                        }
                                      >
                                        <RNSVGSvgView
                                          align="xMidYMid"
                                          bbHeight={16}
                                          bbWidth={16}
                                          height={16}
                                          meetOrSlice={0}
                                          minX={0}
                                          minY={0}
                                          style={
                                            Array [
                                              Object {
                                                "backgroundColor": "transparent",
                                                "borderWidth": 0,
                                              },
                                              undefined,
                                              Object {
                                                "opacity": 1,
                                              },
                                              Object {
                                                "flex": 0,
                                                "height": 16,
                                                "width": 16,
                                              },
                                            ]
                                          }
                                          vbHeight={24}
                                          vbWidth={24}
                                          width={16}
                                        >
                                          <RNSVGGroup
                                            fill={
                                              Array [
                                                0,
                                                4278190080,
                                              ]
                                            }
                                            fillOpacity={1}
                                            fillRule={1}
                                            font={Object {}}
                                            matrix={
                                              Array [
                                                1,
                                                0,
                                                0,
                                                1,
                                                0,
                                                0,
                                              ]
                                            }
                                            opacity={1}
                                            originX={0}
                                            originY={0}
                                            propList={Array []}
                                            rotation={0}
                                            scaleX={1}
                                            scaleY={1}
                                            skewX={0}
                                            skewY={0}
                                            stroke={null}
                                            strokeDasharray={null}
                                            strokeDashoffset={null}
                                            strokeLinecap={0}
                                            strokeLinejoin={0}
                                            strokeMiterlimit={4}
                                            strokeOpacity={1}
                                            strokeWidth={1}
                                            vectorEffect={0}
                                            x={0}
                                            y={0}
                                          >
                                            <RNSVGPath
                                              d="M13.07 12l7.2-7.2.5-.5c.3-.3.3-.78 0-1.08-.3-.3-.76-.3-1.06 0l-.5.5-7.2 7.2-7.2-7.2-.5-.5c-.3-.3-.77-.3-1.07 0-.3.3-.3.77 0 1.07l.5.5 7.2 7.2-7.7 7.7c-.3.3-.3.77 0 1.07.3.3.77.3 1.07 0l7.7-7.7 7.7 7.7c.3.3.78.3 1.08 0 .3-.3.3-.77 0-1.07l-7.7-7.7z"
                                              fill={
                                                Array [
                                                  0,
                                                  1294411566,
                                                ]
                                              }
                                              fillOpacity={1}
                                              fillRule={1}
                                              matrix={
                                                Array [
                                                  1,
                                                  0,
                                                  0,
                                                  1,
                                                  0,
                                                  0,
                                                ]
                                              }
                                              opacity={1}
                                              originX={0}
                                              originY={0}
                                              propList={
                                                Array [
                                                  "fill",
                                                ]
                                              }
                                              rotation={0}
                                              scaleX={1}
                                              scaleY={1}
                                              skewX={0}
                                              skewY={0}
                                              stroke={null}
                                              strokeDasharray={null}
                                              strokeDashoffset={null}
                                              strokeLinecap={0}
                                              strokeLinejoin={0}
                                              strokeMiterlimit={4}
                                              strokeOpacity={1}
                                              strokeWidth={1}
                                              vectorEffect={0}
                                              x={0}
                                              y={0}
                                            />
                                          </RNSVGGroup>
                                        </RNSVGSvgView>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                          <RCTScrollView
                            style={
                              Object {
                                "height": "90%",
                              }
                            }
                          >
                            <View />
                          </RCTScrollView>
                        </View>
                      </RCTSafeAreaView>
                    </View>
                  </Modal>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
